# datagen

./: .gitignore  augment_generate.py  generate.py  id_card_generator.py  pyproject.toml
config/: driver_license_fields.json  faces.json  fonts.json  id_card_config.json
config/templates/: template_01.json  template_02.json  template_03.json  template_04.json  template_05.json  template_06.json  template_07.json  template_08.json  template_09.json  template_10.json  template_11.json  template_12.json
src/: __init__.py  fake_data.py  generator.py
utils/: convert_to_labelstudio.py  export_yolo_dataset.py
